# pyhep20_tfpipeline

./: Dockerfile  README.md  environment.yml  features.py  index.ipynb  my_root_style.py  pipeline.py  plot.py  realistic_feature_dict.py  realistic_model.py  requirements.txt  requirements3.txt
Ops/: CMakeLists.txt  FindTensorFlow.cmake  __init__.py
Samples/: QCD_Pt-15to7000_unpacked_train1_1.root  QCD_Pt-15to7000_unpacked_train1_10.root  QCD_Pt-15to7000_unpacked_train1_11.root  QCD_Pt-15to7000_unpacked_train1_12.root  QCD_Pt-15to7000_unpacked_train1_13.root  QCD_Pt-15to7000_unpacked_train1_14.root  QCD_Pt-15to7000_unpacked_train1_15.root  QCD_Pt-15to7000_unpacked_train1_16.root  QCD_Pt-15to7000_unpacked_train1_17.root  QCD_Pt-15to7000_unpacked_train1_18.root  QCD_Pt-15to7000_unpacked_train1_19.root  QCD_Pt-15to7000_unpacked_train1_2.root  QCD_Pt-15to7000_unpacked_train1_20.root  QCD_Pt-15to7000_unpacked_train1_3.root  QCD_Pt-15to7000_unpacked_train1_4.root  QCD_Pt-15to7000_unpacked_train1_5.root  QCD_Pt-15to7000_unpacked_train1_6.root  QCD_Pt-15to7000_unpacked_train1_7.root  QCD_Pt-15to7000_unpacked_train1_8.root  QCD_Pt-15to7000_unpacked_train1_9.root
